--- a/app/app.html
+++ b/app/app.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Hello Electron React!</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+      @import url('https://webdevbook.s3.amazonaws.com/font/css/fontawesome-all.css');
+    </style>
     <script>
       (function() {
         if (!process.env.HOT) {
